<resources>
    <string name="app_name">MqttDemo</string>
    <string name="register_failure"> registration failed. Please try again! </string>
    <string name="register_success"> registered successfully! </string>
    <string name="register_no_blank"> "UID, user name and password, can not be empty, password length shall not be less than four, please check and try again" </string>
    <string name="alertrelogin"> cannot connect to the Internet properly. Do you want to switch to the intranet mode? </string>
    <string name="Intelligent_gateway"> smart gateway </string>
    <string name="smart_plug"> smart socket </string>
    <string name="Metering_Plug"> metering socket </string>
    <string name="Air"> air quality detector </string>
    <string name="RGB"> smart lantern </string>
    <string name="door_sensor"> door and window sensor </string>
    <string name="water_sensor"> immersion sensor </string>
    <string name="pir_sensor"> infrared sensor </string>
    <string name="smoke_sensor"> smoke alarm </string>
    <string name="thp_sensor"> - temperature and humidity sensor </string>
    <string name="gas_sensor"> gas alarm </string>
    <string name="co_sensor">CO alarm </string>
    <string name="sos_sensor"> emergency button </string>
    <string name="sw_sensor"> remote control </string>
    <string name="Lights_have_been_turned_off"> turn off the lights </string>
    <string name="Lights_have_been_turned_on"> lights</string>
    <string name="Doors_or_windows_closed"> door close </string>
    <string name="Doors_or_windows_open"> windows and doors open </string>
    <string name="Tamper"> has been removed </string>
    <string name="Low_power_water_immersion"> low power alarm </string>
    <string name="Water_immersion"> water leakage alarm </string>
    <string name="Water_level_recovery"> leak free </string>
    <string name="Someone_passing_by"> someone passed </string>
    <string name="No_one_passes"> no one passes </string>
    <string name="Smoke"> smoke alarm </string>
    <string name="No_smoke"> no smoke </string>
    <string name="Gas_sensing_alarm"> gas leak alarm </string>
    <string name="Gas_sensing_normal"> no gas leakage </string>
    <string name="co_alarm"> carbon monoxide alarm </string>
    <string name="co_normal"> no carbon monoxide </string>
    <string name="Sos_alarm"> emergency help </string>
    <string name="Sos"> emergency alarm button </string>
    <string name="TemperatureAlarm"> temperature alarm </string>
    <string name="HumidityAlarm"> humidity alarm </string>
    <string name="TemperaturHumidityAlarm"> temperature and humidity alarm </string>
    <string name="Out_alert"> away</string>
    <string name="DeviceDisarm"> from </string>
    <string name="At_home">at home. </string>
    <string name="poweroff"> socket off </string>
    <string name="poweron"> socket open </string>
    <string name="usboff">USB off </string>
    <string name="usbon">USB open </string>
    <string name="Current_Over"> current too large </string>
    <string name="Power_Current_Over"> power current is too large </string>
    <string name="Power_Voltage_Over"> power voltage is too large </string>
    <string name="Current_Voltage_Over"> current voltage is too large </string>
    <string name="Power_Currentvoltage_Over"> power voltage and current </string>
    <string name="Voltage_Over"> voltage is too large </string>
    <string name="Power_Over"> power is too large </string>
    <string name="Arming"> arming</string>
    <string name="TOVC_H"> heavy pollution </string>
    <string name="TOVC_S"> mild pollution </string>
    <string name="PM25"> PM25 alarm </string>
    <string name="PM10"> PM10 alarm </string>
    <string name="CHCO"> formaldehyde alarm </string>
    <string name="tempup"> high temperature alarm </string>
    <string name="templow"> low temperature alarm </string>
    <string name="humup"> humidity alarm </string>
    <string name="humlow"> low humidity alarm </string>
    <string name="Equipment_offline"> device offline </string>
    <string name="Equipment_online"> device online </string>
    <string name="Determine">Determine</string>
    <string name="Cancel">Cancel</string>
    <string name="Signout">Sign out</string>
    <string name="Logonfailedaccount">Logon failed, please confirm the account has been activated</string>
    <string name="enterpriseid">Please enter the correct enterprise ID mailbox and password</string>
    <string name="Registeringuserautomatically">Registering user automatically</string>
    <string name="cloudisavailable">Cloud is available</string>
    <string name="Connectiontocloudfailed">Connection to cloud failed</string>
    <string name="networkisdisconnected">network is disconnected</string>
    <string name="cloudisrestoringnow">cloudisres to ring now</string>
    <string name="Connectdevice">Connect device</string>
    <string name="Connectingdevice">Connecting device...</string>
    <string name="InvalidID">Invalid ID, please connect to network and activate device</string>
    <string name="Connectionserver">Connection device failed, the phone is not connected to the server</string>
    <string name="Networkunavailable">Network unavailable, connect device failed</string>
    <string name="Devicenotfound">Device not found</string>
    <string name="Repeatedcall">Repeated call</string>
    <string name="fail">Fail</string>
    <string name="ControllingdeviceinLAN">Controlling device in LAN</string>
    <string name="Intranet">Intranet</string>
    <string name="Cloud">Cloud</string>
    <string name="Controllingdeviceoverthecloud">Controlling device over the cloud</string>
    <string name="Deviceauthenticationfailed">Device authentication failed</string>
    <string name="Devicenotonline">Device not online</string>
    <string name="Connectiondevicetimeout">Connection device timeout</string>
    <string name="Connectionerror">Connection device failure, server internal error</string>
    <string name="Connectiondevicefailure">Connection device failure, the device is not in the LAN, and the current mobile phone only LAN environment</string>
    <string name="othererrorcode">Connection device failure, other error code</string>
    <string name="Offline">Off-line</string>
    <string name="Instructionset">Instruction set</string>
    <string name="connectingdevicesuccessfully">connecting device successfully</string>
    <string name="connectingdevicefailed">connecting device failed</string>
    <string name="phoneisnotconnectedtotheserver">Failed to send data, the phone is not connected to the server</string>
    <string name="Failedcurrentnetwork">Failed to send data to the current network</string>
    <string name="Sendingdatafaileds">Sending data failed, error code：</string>
    <string name="Success">Success</string>
    <string name="overtime">overtime</string>
    <string name="Controllingdevicefailed">Controlling device failed. Current account is not subscribed to this device, please resubscribe.</string>
    <string name="setdevicepwd">Input device password</string>
    <string name="Aredeletedevice">Are you sure you want to delete this device？</string>
    <string name="Tips">Tips</string>
    <string name="scandevice">Scan to device:</string>
    <string name="notopenw">Open LAN service</string>
    <string name="MobileWIFI">Mobile network environment without /wifi</string>
    <string name="Callscanfailed">Call scan failed:</string>
    <string name="ExitDemoprogram">Exit Demo program？</string>
    <string name="Preservation">Preservation</string>
    <string name="Modifiedrestarting">Modified successfully, is restarting..</string>
    <string name="Inscan">In scan</string>
    <string name="Scanlocaldevice">Scan local device</string>
    <string name="back">back</string>
    <string name="ConfigureWiFi">Configure WiFi</string>
    <string name="Wifipassword">Wifi password:</string>
    <string name="Toconfigure">To configure</string>
    <string name="Stoplink">Stop link</string>
    <string name="Startlink">Start link</string>
    <string name="Configurationtimeout">Configuration timeout</string>
    <string name="Foundscanningdevice">Found that the device can return to the scanning device </string>
    <string name="Configurationcomplete">Configuration complete</string>
    <string name="device">"device:  "</string>
    <string name="Entersavename">Enter save name</string>
    <string name="Namecannotbeempty">Name cannot be empty</string>
    <string name="Pleasedoexceeddigits">Please do not exceed 20 digits.</string>
    <string name="Thisalreadyexists">This command already exists</string>
    <string name="Pleaseentercommand">Please enter command.</string>
    <string name="Inputinstructioneven">Input instruction should be even</string>
    <string name="Inputeven">Input instruction should be even</string>
    <string name="open">Open</string>
    <string name="Close">Close</string>
    <string name="Confirmdelete">Confirm delete</string>
    <string name="Commanddo">Command do</string>
    <string name="Pleaseinputpassword">Please input a password</string>
    <string name="codeforthedevice">The device has an authorization code, please enter the license code for the device</string>
    <string name="Pleasecode">Please enter the device initialization license code</string>
    <string name="Pleaserememberyourpassword">To create an access authorization code for the device, the password is less than 900000000.</string>
    <string name="Pleaseenterthedevicepasswordpasswordlessthan">Please enter the device password, password less than</string>
    <string name="Authenticationdevicefailed">Authentication device failed</string>
    <string name="Failedsetinitialpassword">Failed to set initial password</string>
    <string name="Authenticationdevicelicensecodepleaselater">Authentication device license code, please later...</string>
    <string name="Equipmentcertification">Equipment certification</string>
    <string name="Setdefaultpassword">Set default password:</string>
    <string name="Authenticationdevicesuccess">Authentication device success</string>
    <string name="Passworderror">Password error</string>
    <string name="Failedtosetinitialpassword">Failed to set initial password:</string>
    <string name="Errorcode">Error code:</string>
    <string name="about">About</string>
    <string name="Adddevice">Add device</string>
    <string name="menu">Menu</string>
    <string name="Selectdevice">Select device</string>
    <string name="Sendimmediately">Send immediately</string>
    <string name="SelectAdddevice">Select Add device</string>
    <string name="Changeaccesskey">Change AccessKey</string>
    <string name="Clearcache">Clear cache</string>
    <string name="Equipmentdescription">Equipment description</string>
    <string name="Intelligentlamp">Intelligent lamp</string>
    <string name="Saveinstruction">Save instruction</string>
    <string name="empty">empty</string>
    <string name="Stopstartrolling">Stop / start rolling</string>
    <string name="Stopreception">Stop / start reception</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="ModifytheresourceID">Modify the resource ID (will restart the program)</string>
    <string name="Pleaseinputcompany_id">Please input Company ID:</string>
    <string name="Pleaseenterthemailbox">Please enter the mailbox:</string>
    <string name="email_phoen_password_app_email">Please fill in the correct Email/Phoen Password, after the point is determined, APP will be used to fill in the Email to register a user account, you need to receive e-mail activation account, click on the OK button.</string>
    <string name="ModifyproductID">Modify product ID</string>
    <string name="Pleaseinputproduct_id">Please input product id</string>
    <string name="Pleaseentertheinitialpassword">Please enter the initial password</string>
</resources>